--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -1,24 +1,24 @@
 $block-caption
     &, a
         text-decoration: none
-    text-transform: uppercase
-    color: color-default + #111
-    line-height: 1em
-    text-shadow: 0 1px #fff
+        text-transform: uppercase
+        color: color-default + #111
+        line-height: 1em
+        text-shadow: 3px 3px #fff
 
 $base-style
     h1
-        font-size: 2em
+        font-size: 2.2em
     h2
-        font-size: 1.5em
+        font-size: 1.9em
     h3
-        font-size: 1.3em
+        font-size: 1.7em
     h4
-        font-size: 1.2em
+        font-size: 1.5em
     h5
-        font-size: 1em
+        font-size: 1.3em
     h6
-        font-size: 1em
+        font-size: 1.2em
         color: color-grey
     hr
         border: 1px dashed color-border
