--- a/layout/comment/index.ejs
+++ b/layout/comment/index.ejs
@@ -6,19 +6,14 @@
         <%- partial('comment/duoshuo') %>
     <% } else if (theme.comment.youyan) { %>
         <%- partial('comment/youyan') %>
-    <% } else if (theme.comment.livere) { %>
-        <%- partial('comment/livere') %>
     <% } else if (theme.comment.facebook) { %>
       <%- partial('comment/facebook') %>
-    <% } else if (typeof(theme.comment.isso) === 'string'
-                   || theme.comment.isso && theme.comment.isso.on) { %>
+    <% } else if (theme.comment.isso) { %>
         <%- partial('comment/isso') %>
     <% } else if (theme.comment.changyan.on) { %>
         <%- partial('comment/changyan') %>
     <% } else if (theme.comment.valine.on) { %>
         <%- partial('comment/valine') %>
-    <% } else if (theme.comment.gitalk.on) { %>
-        <%- partial('comment/gitalk') %>
     <% } %>
     </section>
 <% } %>
