--- a/layout/comment/valine.ejs
+++ b/layout/comment/valine.ejs
@@ -1,25 +1,16 @@
 <% if (typeof(script) !== 'undefined' && script) { %>
-    <script src="//unpkg.com/valine"></script>
+    <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
+    <script src="//cdn.jsdelivr.net/gh/xcss/valine@v1.1.7-rc3/dist/Valine.min.js"></script>
     <script>
-        var GUEST = ['nick','mail','link'];
-        var meta = '<%= theme.comment.valine.meta %>';
-        meta = meta.split(',').filter(function (item) {
-            return GUEST.indexOf(item)>-1;
-        });
-        var avatarcdn = '<%= theme.comment.valine.avatar_cdn %>' == true;
         new Valine({
-            el: '.vcomments',
-            notify: "<%= theme.comment.valine.notify %>",
-            verify: "<%= theme.comment.valine.verify %>",
-            appId: "<%= theme.comment.valine.appId %>",
-            appKey: "<%= theme.comment.valine.appKey %>",
-            placeholder: "<%= theme.comment.valine.placeholder %>",
-            avatar:"<%= theme.comment.valine.avatar %>",
-            recordIP:"<%= theme.comment.valine.recordip %>",
-            visitor: "<%= theme.comment.valine.visitor %>"
+            el: '#valine-thread' ,
+            notify:<%= theme.comment.valine.notify %>,
+            verify:<%= theme.comment.valine.verify %>,
+            app_id: '<%= theme.comment.valine.appId %>',
+            app_key: '<%= theme.comment.valine.appKey %>',
+            placeholder: '<%= theme.comment.valine.placeholder %>'
         });
     </script>
 <% } else { %>
-    <!-- Valine -->
-    <div class="vcomments"></div>
+    <div id="valine-thread"></div>
 <% } %>
