--- a/layout/common/archive.ejs
+++ b/layout/common/archive.ejs
@@ -27,6 +27,7 @@
 <% if (page.total > 1) { %>
     <nav id="page-nav">
         <span class="pages"><%= _p('nav.current_page', page.current) %><%= _p('nav.total_page', page.total) %></span>
-        <%- paginator({prev_text: '&laquo;', next_text: '&raquo;', escape: false}) %>
+        <%- paginator({prev_text: '&laquo;', next_text: '&raquo;'}) %>
     </nav>
 <% } %>
+<%- partial('ads/adsense_horizontal') %>
