--- a/layout/common/footer.ejs
+++ b/layout/common/footer.ejs
@@ -7,12 +7,7 @@
                     <a href="<%- url_for() %>" class="logo"></a>
                 </h1>
                 <p>&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %></p>
-                <% if (theme.poweredby) { %>
-                <p>Powered by <a href="https://hexo.io/" target="_blank">Hexo</a>. Theme by <a href="https://github.com/ppoffice" target="_blank">PPOffice</a></p>
-                <% } %>
-            </div>
-            <div class="footer-plugins">
-              <%- partial('plugin/scripts', { isFooter: true }) %>
+                <p>Powered by <a href="//hexo.io/" target="_blank">Hexo</a>. Theme by <a href="//github.com/ppoffice" target="_blank">PPOffice</a></p>
             </div>
         </div>
     </div>
