--- a/layout/common/sidebar.ejs
+++ b/layout/common/sidebar.ejs
@@ -6,7 +6,7 @@
             <% for (var i in theme.customize.social_links) { %>
                 <% if (theme.customize.social_links[i]) { %>
                 <li>
-                    <a class="social-tooltip" title="<%= i %>" href="<%- url_for(theme.customize.social_links[i]) %>" target="_blank" rel="noopener">
+                    <a class="social-tooltip" title="<%= i %>" href="<%- url_for(theme.customize.social_links[i]) %>" target="_blank">
                         <i class="icon fa fa-<%= i %>"></i>
                     </a>
                 </li>
@@ -20,8 +20,9 @@
     <div class="widgets-container">
         <% if (theme.widgets) { %>
             <% theme.widgets.forEach(function(widget) { %>
-                <%- partial('widget/' + widget, {post: page}) %>
+                <%- partial('widget/' + widget) %>
             <% }) %>
         <% } %>
     </div>
+    <%- partial('ads/adsense_rectangle') %>
 </aside>
