--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -1,5 +1,5 @@
 .article-single
-    padding: 30px 30px 20px
+    padding: 50px 50px 30px
 
 .article-inner
     overflow: hidden
@@ -158,9 +158,6 @@
         text-decoration: none
         &:hover
             text-decoration: underline
-    figcaption
-        a
-            float: right
     ul, ol, dl
         margin-top: line-height
         margin-bottom: line-height
@@ -241,6 +238,8 @@
             width: 100%
             height: 100%
             margin-top: 0
+    .footnotes
+        font-size: 0.8em
 
 .article-more-link a
     display: inline-block
@@ -417,7 +416,6 @@ $article-share-link
             display: block
             max-width: 100%
             margin: 0 auto
-
 
 /* right-to-left languages */
 .article.rtl
