--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -149,12 +149,9 @@
     ul, ol
         list-style: none
         li
-            margin: 10px 0
-            padding-bottom: 10px
+            padding: 10px 0
             font-size: font-size + 1
             border-bottom: 1px solid #E4E4E4
-            &:last-child
-                margin-bottom: 0px
             a
                 color: color-sidebar-text
                 &:before
@@ -170,7 +167,8 @@
             list-style: none
             li
                 border: none
-                padding-bottom: 0
+                &:last-child
+                    padding-bottom: 0px
 
 .widget-float
     a
@@ -247,12 +245,3 @@
 .tagcloud
     a
         margin-right: 5px
-
-.toc-article
-    margin: 0
-    padding: 0
-    .toc
-        padding: 0
-        margin: 10px 0 0
-        .toc-item
-            list-style: none
