--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -24,12 +24,14 @@ color-sidebar-text-dark = #444
 color-footer-background = #33363b
 
 // Fonts
-font-sans = "Titillium Web", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif
+font-sans = 'Montserrat', "NanumSquareRound", "Malgun Gothic", "맑은 고딕", "돋움", dotum, sans-serif
+//font-sans = "Titillium Web", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif
 font-serif = Georgia, "Times New Roman", serif
-font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
+font-mono = "Nanum Gothic Coding", "NanumSquareRound", Consolas, monospace
+//font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon-profile-size = 24px
 font-size = 14px
-font-size-article = 18px
+font-size-article = 17px
 line-height = 1.6em
 line-height-title = 1.3em
 
